[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
crossterm = "0.29.0"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
# panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
missing_errors_doc = "allow"
# module_name_repetitions = "allow"
# missing_panics_doc = "allow"
